fixed adaptive for slider

--- a/index.html
+++ b/index.html
@@ -145,20 +145,21 @@
                     <div class="slide__decor">
                         <div class="slider">
                             <div class="slider__slide">
-                                    <div class="slide__decor-composition">
-                                            <svg class="composition__svg">
-                                                <use xlink:href="img/svg/sprite/content.svg#burger"></use>
-                                            </svg>
-                                            состав
-                                        </div>
-                                        <div class="slide__decor-kkal">
-                                            <svg class="kkal__svg">
-                                                <use xlink:href="img/svg/sprite/content.svg#kkal"></use>
-                                            </svg>
-                                            <div class="kkal__count"> 1200 </div>
-                                            ккал
-                                        </div>
-                                <div class="slide__decor-img"></div>
+                                <div class="slide__decor-composition">
+                                    <svg class="composition__svg">
+                                        <use xlink:href="img/svg/sprite/content.svg#burger"></use>
+                                    </svg>
+                                    состав
+                                </div>
+                                <div class="slide__decor-kkal">
+                                    <svg class="kkal__svg">
+                                        <use xlink:href="img/svg/sprite/content.svg#kkal"></use>
+                                    </svg>
+                                    <div class="kkal__count"> 1200 </div>
+                                    ккал
+                                </div>
+                                <img src="img/decor/dark-beef.png" alt="dark-beef-burger" class="slide__img">
+                                <!-- <div class="slide__decor-img"></div> -->
                                 <div class="slide__content">
                                     <div class="title slide__title">Dark beef burger</div>
                                     <p class="slide__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего
@@ -173,20 +174,21 @@
                                 </div>
                             </div>
                             <div class="slider__slide">
-                                    <div class="slide__decor-composition">
-                                            <svg class="composition__svg">
-                                                <use xlink:href="img/svg/sprite/content.svg#burger"></use>
-                                            </svg>
-                                            состав
-                                        </div>
-                                        <div class="slide__decor-kkal">
-                                            <svg class="kkal__svg">
-                                                <use xlink:href="img/svg/sprite/content.svg#kkal"></use>
-                                            </svg>
-                                            <div class="kkal__count"> 1200 </div>
-                                            ккал
-                                        </div>
-                                <div class="slide__decor-img"></div>
+                                <div class="slide__decor-composition">
+                                    <svg class="composition__svg">
+                                        <use xlink:href="img/svg/sprite/content.svg#burger"></use>
+                                    </svg>
+                                    состав
+                                </div>
+                                <div class="slide__decor-kkal">
+                                    <svg class="kkal__svg">
+                                        <use xlink:href="img/svg/sprite/content.svg#kkal"></use>
+                                    </svg>
+                                    <div class="kkal__count"> 1200 </div>
+                                    ккал
+                                </div>
+                                <img src="img/decor/dark-beef.png" alt="dark-beef-burger" class="slide__img">
+                                <!-- <div class="slide__decor-img"></div> -->
                                 <div class="slide__content">
                                     <div class="title slide__title">Dark beef burger</div>
                                     <p class="slide__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего
