--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
             </div>
             <div class="natural__burger-menu" id="menu">
                 <div class="container">
-                    <!-- <button class="menu__exit"></button> -->
                     <ul class="burger-menu__list">
                         <li class="burger-menu__item">
                             <a href="#" class="burger-menu__link">о нас</a>
@@ -136,11 +135,6 @@
         </section>
         <section class="section burger-info">
             <div class="container burger-info__container">
-                <!-- <button type="button" class="burger-info__btn-left">
-                    <svg class="btn-left__svg">
-                        <use xlink:href="img/svg/sprite/content.svg#scroll"></use>
-                    </svg>
-                </button> -->
                 <div class="burger-info__slide">
                     <div class="slide__decor">
                         <div class="slider">
@@ -159,7 +153,6 @@
                                     ккал
                                 </div>
                                 <img src="img/decor/dark-beef.png" alt="dark-beef-burger" class="slide__img">
-                                <!-- <div class="slide__decor-img"></div> -->
                                 <div class="slide__content">
                                     <div class="title slide__title">Dark beef burger</div>
                                     <p class="slide__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего
@@ -188,7 +181,6 @@
                                     ккал
                                 </div>
                                 <img src="img/decor/dark-beef.png" alt="dark-beef-burger" class="slide__img">
-                                <!-- <div class="slide__decor-img"></div> -->
                                 <div class="slide__content">
                                     <div class="title slide__title">Dark beef burger</div>
                                     <p class="slide__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего
@@ -203,38 +195,8 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="slide__decor-composition">
-                            <svg class="composition__svg">
-                                <use xlink:href="img/svg/sprite/content.svg#burger"></use>
-                            </svg>
-                            состав
-                        </div>
-                        <div class="slide__decor-kkal">
-                            <svg class="kkal__svg">
-                                <use xlink:href="img/svg/sprite/content.svg#kkal"></use>
-                            </svg>
-                            <div class="kkal__count"> 1200 </div>
-                            ккал
-                        </div> -->
                     </div>
-                    <!-- <div class="slide__content">
-                        <div class="title slide__title">Dark beef burger</div>
-                        <p class="slide__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра
-                            эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического
-                            соуса чураско.</p>
-                        <div class="slide__price">500
-                            <span class="slide__price-val">рублей</span>
-                        </div>
-                        <a href="#" class="slide__link">
-                            <div class="slide__btn">Заказать</div>
-                        </a>
-                    </div> -->
                 </div>
-                <!-- <button type="button" class="burger-info__btn-right">
-                    <svg class="btn-right__svg">
-                        <use xlink:href="img/svg/sprite/content.svg#scroll"></use>
-                    </svg>
-                </button> -->
             </div>
         </section>
         <section class="section team">
@@ -468,6 +430,10 @@
                         </div>
                     </form>
                 </div>
+                <div class="delivery__bg"></div>
+                <div class="delivery__msg">
+                    <button class="delivery__msg-btn">Отправить</button>
+                </div>
             </div>
         </section>
         <section class="map">
@@ -519,51 +485,6 @@
             </footer>
         </section>
     </div>
-    <!-- </div> -->
-    <!-- <div class="side-nav">
-        <ul class="side-nav__list">
-            <li class="side-nav__item">
-                <a href="#" class="side-nav__link" data-scroll-to="0">
-                    <div class="side-nav__el side-nav__active"></div>
-                </a>
-            </li>
-            <li class="side-nav__item">
-                <a href="#" class="side-nav__link" data-scroll-to="1">
-                    <div class="side-nav__el"></div>
-                </a>
-            </li>
-            <li class="side-nav__item">
-                <a href="#" class="side-nav__link" data-scroll-to="2">
-                    <div class="side-nav__el"></div>
-                </a>
-            </li>
-            <li class="side-nav__item">
-                <a href="#" class="side-nav__link" data-scroll-to="3">
-                    <div class="side-nav__el"></div>
-                </a>
-            </li>
-            <li class="side-nav__item">
-                <a href="#" class="side-nav__link" data-scroll-to="4">
-                    <div class="side-nav__el"></div>
-                </a>
-            </li>
-            <li class="side-nav__item">
-                <a href="#" class="side-nav__link data-scroll-to=" 5 "">
-                    <div class="side-nav__el"></div>
-                </a>
-            </li>
-            <li class="side-nav__item">
-                <a href="#" class="side-nav__link" data-scroll-to="6">
-                    <div class="side-nav__el"></div>
-                </a>
-            </li>
-            <li class="side-nav__item">
-                <a href="#" class="side-nav__link" data-scroll-to="7">
-                    <div class="side-nav__el"></div>
-                </a>
-            </li>
-        </ul>
-    </div> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/jquery.bxslider.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.3.6/mobile-detect.min.js"></script>
@@ -571,7 +492,6 @@
     <script src="js/ymaps.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
     <script src="js/jquery.onepage-scroll.js"></script>
-    <!-- <script src="js/one-scroll.js"></script> -->
 </body>
 
 </html>
