--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </section>
-        <section class="section best">
+        <section class="section best" id="best">
             <div class="container best__container">
                 <h2 class="title best__tittle">Мы лучшие</h2>
                 <ul class="best__list">
@@ -133,7 +133,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section burger-info">
+        <section class="section burger-info" id="info">
             <div class="container burger-info__container">
                 <div class="burger-info__slide">
                     <div class="slide__decor">
@@ -245,7 +245,7 @@
                 </div>
             </div>
         </section>
-        <section class="section team">
+        <section class="section team" id="team">
             <div class="container team__container">
                 <div class="team__description">
                     <h1 class="title team__tittle">Команда</h1>
@@ -296,7 +296,7 @@
                 </div>
             </div>
         </section>
-        <section class="section menu">
+        <section class="section menu" id="menu">
             <div class="container menu__container">
                 <h1 class="title menu__tittle">Меню</h1>
                 <div class="menu__accordion">
@@ -335,7 +335,7 @@
                 </div>
             </div>
         </section>
-        <section class="section staff">
+        <section class="section staff" id="staff">
             <div class="staff__popup-bg"></div>
             <div class="staff__popup">
                 <h2 class="popup-title">Константин Спилберг</h2>
@@ -408,7 +408,7 @@
                 </div>
             </div>
         </section>
-        <section class="section delivery">
+        <section class="section delivery" id="delivery">
             <div class="container delivery__container">
                 <div class="title delivery__tittle">Закажите доставку</div>
                 <div class="delivery__form">
