--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Burger</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <link rel="stylesheet" href="css/jquery.bxslider.css">
     <link rel="stylesheet" href="css/onepage-scroll.css">
     <link rel="stylesheet" href="css/normalize.css">
@@ -340,8 +341,8 @@
             <div class="staff__popup">
                 <h2 class="popup-title">Константин Спилберг</h2>
                 <p class="popup-text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки
-                        могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                        <button type="button" class="popup__btn"></button>
+                    могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                <button type="button" class="popup__btn"></button>
             </div>
             <div class="staff__ava staff__ava-1" style="background-image: url('img/ava/1.png')">
                 <div class="staff__ava-more">
