--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                                 <a href="#6" class="header__item-link" data-index="6">Отзывы</a>
                             </li>
                             <li class="header__item">
-                                <a href="#7" class="header__item-link" data-index="7">Контакты</a>
+                                <a href="#8" class="header__item-link" data-index="8">Контакты</a>
                             </li>
                             <li class="header__item">
-                                <a href="#8" class="header__item-link" data-index="8">
+                                <a href="#7" class="header__item-link" data-index="7">
                                     <div class="header__item-link-btn">Заказать</div>
                                 </a>
                             </li>
@@ -69,7 +69,7 @@
                     <div class="natural__text">натуральные бургеры</div>
                 </h1>
                 <div class="bot-scroll">
-                    <a href="#" class="bot-scroll__link-next">
+                    <a href="#2" class="bot-scroll__link-next" data-index="2">
                         <div class="bot-scroll__scroll-logo"></div>
                     </a>
                 </div>
