--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <div class="header__add">
-                        <a href="#" class="header__add-link">
+                        <a href="#7" class="header__add-link" data-index="7">
                             <div class="header__add-btn">Заказать</div>
                         </a>
                     </div>
@@ -78,22 +78,22 @@
                 <div class="container">
                     <ul class="burger-menu__list">
                         <li class="burger-menu__item">
-                            <a href="#" class="burger-menu__link">о нас</a>
+                            <a href="#2" class="burger-menu__link" data-index="2">о нас</a>
                         </li>
                         <li class="burger-menu__item">
-                            <a href="#" class="burger-menu__link">бургеры</a>
+                            <a href="#3" class="burger-menu__link" data-index="3">бургеры</a>
                         </li>
                         <li class="burger-menu__item">
-                            <a href="#" class="burger-menu__link">команда</a>
+                            <a href="#4" class="burger-menu__link" data-index="4">команда</a>
                         </li>
                         <li class="burger-menu__item">
-                            <a href="#" class="burger-menu__link">меню</a>
+                            <a href="#5" class="burger-menu__link" data-index="5">меню</a>
                         </li>
                         <li class="burger-menu__item">
-                            <a href="#" class="burger-menu__link">отзывы</a>
+                            <a href="#6" class="burger-menu__link" data-index="6">отзывы</a>
                         </li>
                         <li class="burger-menu__item">
-                            <a href="#" class="burger-menu__link">котакты</a>
+                            <a href="#8" class="burger-menu__link" data-index="8">котакты</a>
                         </li>
                     </ul>
                 </div>
@@ -208,7 +208,7 @@
                                     <div class="slide__price">500
                                         <span class="slide__price-val">рублей</span>
                                     </div>
-                                    <a href="#" class="slide__link">
+                                    <a href="#7" class="slide__link" data-index="7">
                                         <div class="slide__btn">Заказать</div>
                                     </a>
                                 </div>
@@ -282,7 +282,7 @@
                                     <div class="slide__price">500
                                         <span class="slide__price-val">рублей</span>
                                     </div>
-                                    <a href="#" class="slide__link">
+                                    <a href="#7" class="slide__link" data-index="7">
                                         <div class="slide__btn">Заказать</div>
                                     </a>
                                 </div>
@@ -356,7 +356,7 @@
                                     <div class="slide__price">500
                                         <span class="slide__price-val">рублей</span>
                                     </div>
-                                    <a href="#" class="slide__link">
+                                    <a href="#7" class="slide__link" data-index="7">
                                         <div class="slide__btn">Заказать</div>
                                     </a>
                                 </div>
@@ -430,8 +430,8 @@
                                     <div class="slide__price">500
                                         <span class="slide__price-val">рублей</span>
                                     </div>
-                                    <a href="#" class="slide__link">
-                                        <div class="slide__btn">Заказать</div>
+                                    <a href="#7" class="slide__link" data-index="7">
+                                        <div class="slide__btn" >Заказать</div>
                                     </a>
                                 </div>
                             </div>
@@ -504,7 +504,7 @@
                                     <div class="slide__price">500
                                         <span class="slide__price-val">рублей</span>
                                     </div>
-                                    <a href="#" class="slide__link">
+                                    <a href="#7" class="slide__link" data-index="7">
                                         <div class="slide__btn">Заказать</div>
                                     </a>
                                 </div>
